--- a/Wildfire-ETL.ipynb
+++ b/Wildfire-ETL.ipynb
@@ -261,6 +261,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['AcresBurned', 'Active', 'AdminUnit', 'AirTankers', 'ArchiveYear',\n",
+       "       'CalFireIncident', 'CanonicalUrl', 'ConditionStatement',\n",
+       "       'ControlStatement', 'Counties', 'CountyIds', 'CrewsInvolved', 'Dozers',\n",
+       "       'Engines', 'Extinguished', 'Fatalities', 'Featured', 'Final',\n",
+       "       'FuelType', 'Helicopters', 'Injuries', 'Latitude', 'Location',\n",
+       "       'Longitude', 'MajorIncident', 'Name', 'PercentContained',\n",
+       "       'PersonnelInvolved', 'Public', 'SearchDescription', 'SearchKeywords',\n",
+       "       'Started', 'Status', 'StructuresDamaged', 'StructuresDestroyed',\n",
+       "       'StructuresEvacuated', 'StructuresThreatened', 'UniqueId', 'Updated',\n",
+       "       'WaterTenders'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal_Fire_Inci_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -3592,10 +3622,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for city in cities:\n",
+    "    try:\n",
+    "        url = f'https://history.openweathermap.org/data/2.5/aggregated/year=?lat={lat}&lon={lon}&appid={weather_api_key}&units=metric'\n",
+    "#         http://history.openweathermap.org/data/2.5/history/city?lat={lat}&lon={lon}&type=hour&start={start}&end={end}&appid={YOUR_API_KEY}\n",
+    "\n",
+    "        city_data = requests.get(url).json()\n",
+    "        print(f'Processing Record {record_counter} of Set {set_counter} | {city}')\n",
+    "        city_data_list.append([city,city_data['coord']['lat'],city_data['coord']['lon'],\n",
+    "                               city_data['main']['temp_max'],city_data['main']['humidity'],\n",
+    "                               city_data['clouds']['all'], city_data['wind']['speed'],\n",
+    "                               city_data['sys']['country'],city_data['dt']])\n",
+    "    except:\n",
+    "        print('City not found. Skipping...')\n",
+    "        print(city_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# rds_connection_string = \"postgres:Tgnome75@localhost:5432/customer_db\"\n",
     "# engine = create_engine(f'postgresql://{rds_connection_string}')\n",
     "# new_customer_data_df.to_sql(name='customer_name', con=engine, if_exists='append', index=False)\n",
     "# pd.read_sql_query('select * from customer_name', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary of crews\n",
+    "# Summary by year\n",
+    "# Summary by counties\n",
+    "# Summary by "
    ]
   }
  ],
