--- a/Wildfire-ETL.ipynb
+++ b/Wildfire-ETL.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extraction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -690,6 +697,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
@@ -715,6 +729,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drop unneeded data columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -727,6 +748,13 @@
     "wrong_columns = CA_countys.loc[:,end_date:]\n",
     "CA_countys = CA_countys.drop(columns = wrong_columns.columns)\n",
     "CA_countys = CA_countys.drop(columns = ['SizeRank','RegionType','StateName'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split normalize dataframe"
    ]
   },
   {
@@ -877,149 +905,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>UniqueId</th>\n",
-       "      <th>CountyIds</th>\n",
-       "      <th>ArchiveYear</th>\n",
-       "      <th>AcresBurned</th>\n",
-       "      <th>StructuresDamaged</th>\n",
-       "      <th>StructuresDestroyed</th>\n",
-       "      <th>Updated</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>Started</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5fb18d4d-213f-4d83-a179-daaf11939e78</td>\n",
-       "      <td>55</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>257314.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2013-09-06T18:30:00Z</td>\n",
-       "      <td>37.857000</td>\n",
-       "      <td>-120.086000</td>\n",
-       "      <td>2013-08-17T15:25:00Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>bf37805e-1cc2-4208-9972-753e47874c87</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>30274.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2013-06-08T18:30:00Z</td>\n",
-       "      <td>34.585595</td>\n",
-       "      <td>-118.423176</td>\n",
-       "      <td>2013-05-30T15:28:00Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>a3149fec-4d48-427c-8b2c-59e8b79d59db</td>\n",
-       "      <td>33</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>27531.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2013-07-30T18:00:00Z</td>\n",
-       "      <td>33.709500</td>\n",
-       "      <td>-116.728850</td>\n",
-       "      <td>2013-07-15T13:43:00Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8213f5c7-34fa-403b-a4bc-da2ace6e6625</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>27440.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2013-08-30T08:00:00Z</td>\n",
-       "      <td>39.120000</td>\n",
-       "      <td>-120.650000</td>\n",
-       "      <td>2013-08-10T16:30:00Z</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>46731fb8-3350-4920-bdf7-910ac0eb715c</td>\n",
-       "      <td>56</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>24251.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2013-05-11T06:30:00Z</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2013-05-02T07:01:00Z</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                               UniqueId CountyIds  ArchiveYear  AcresBurned  \\\n",
-       "0  5fb18d4d-213f-4d83-a179-daaf11939e78        55         2013     257314.0   \n",
-       "1  bf37805e-1cc2-4208-9972-753e47874c87        19         2013      30274.0   \n",
-       "2  a3149fec-4d48-427c-8b2c-59e8b79d59db        33         2013      27531.0   \n",
-       "3  8213f5c7-34fa-403b-a4bc-da2ace6e6625        31         2013      27440.0   \n",
-       "4  46731fb8-3350-4920-bdf7-910ac0eb715c        56         2013      24251.0   \n",
-       "\n",
-       "   StructuresDamaged  StructuresDestroyed               Updated   Latitude  \\\n",
-       "0                NaN                  NaN  2013-09-06T18:30:00Z  37.857000   \n",
-       "1                NaN                  NaN  2013-06-08T18:30:00Z  34.585595   \n",
-       "2                NaN                  NaN  2013-07-30T18:00:00Z  33.709500   \n",
-       "3                NaN                  NaN  2013-08-30T08:00:00Z  39.120000   \n",
-       "4                6.0                 10.0  2013-05-11T06:30:00Z   0.000000   \n",
-       "\n",
-       "    Longitude               Started  \n",
-       "0 -120.086000  2013-08-17T15:25:00Z  \n",
-       "1 -118.423176  2013-05-30T15:28:00Z  \n",
-       "2 -116.728850  2013-07-15T13:43:00Z  \n",
-       "3 -120.650000  2013-08-10T16:30:00Z  \n",
-       "4    0.000000  2013-05-02T07:01:00Z  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cal_Fire_Inci_df[['UniqueId','CountyIds', 'ArchiveYear','AcresBurned',\n",
-    "                               'StructuresDamaged', 'StructuresDestroyed', 'Updated',\n",
-    "                               'Latitude', 'Longitude', 'Started']].head()"
+    "# cal_Fire_Inci_df[['UniqueId','CountyIds', 'ArchiveYear','AcresBurned',\n",
+    "#                                'StructuresDamaged', 'StructuresDestroyed', 'Updated',\n",
+    "#                                'Latitude', 'Longitude', 'Started']].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,12 +927,36 @@
     "       'Updated':'Extinguished'})\n",
     "county_CA = county_CA.rename(columns = {'RegionID':'SaleID', 'variable':'Date', 'RegionName':'CountyID',\n",
     "       'value':'MedianPrice'})\n",
-    "countys = countys.rename(columns ={'index': 'CountyID', 'RegionName': 'countyName'})\n",
+    "countys = countys.rename(columns ={'index': 'CountyID', 'RegionName': 'countyName'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Cal_Fire_db['FireID'] = Cal_Fire_db['FireID'].apply(lambda s : abs(hash(s)) % (10 ** 8))\n",
-    "Cal_Fire_db['CountyID'] = Cal_Fire_db['CountyID'].apply(lambda s : abs(hash(s)) % (10 ** 8))\n",
+    "Cal_Fire_db['CountyID'] = Cal_Fire_db['CountyID'].apply(lambda s : abs(hash(s)) % (10 ** 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "county_CA['SaleID'] = county_CA['MedianPrice'].apply(lambda s : abs(hash(s)) % (10 ** 8))\n",
-    "county_CA['CountyID'] = county_CA['CountyID'].apply(lambda s : abs(hash(s)) % (10 ** 8))\n",
-    "countys['CountyID'] = countys['countyName'].apply(lambda s : abs(hash(s)) % (10 ** 8))\n"
+    "county_CA['CountyID'] = county_CA['CountyID'].apply(lambda s : abs(hash(s)) % (10 ** 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countys['CountyID'] = countys['countyName'].apply(lambda s : abs(hash(s)) % (10 ** 8))"
    ]
   },
   {
@@ -1049,12 +970,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "rds_connection_string = \"postgres:Tgnome75@localhost:5432/ETL\"\n",
-    "engine = create_engine(f'postgresql://{rds_connection_string}')\n",
+    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "countys.to_sql(name='county', con=engine, if_exists='replace', index=False)\n",
     "county_CA.to_sql(name='salehistory', con=engine, if_exists='replace', index=False)\n",
     "Cal_Fire_db.to_sql(name='fires', con=engine, if_exists='replace', index=False)"
@@ -1069,6 +998,24 @@
     "County = pd.read_sql_query('select * from county', con=engine)\n",
     "SaleHistory = pd.read_sql_query('select * from salehistory', con=engine)\n",
     "Fires = pd.read_sql_query('select * from fires', con=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "County"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countyPrices = pd.merge(SaleHistory, County, on = 'CountyID', how='right', validate = 'many_to_one')"
    ]
   },
   {
@@ -1307,10 +1254,15 @@
     }
    ],
    "source": [
-    "# County\n",
-    "# SaleHistory\n",
-    "Fires"
+    "countyFires = pd.merge(Fires, County, on ='CountyID', how = 'right', validate = 'many_to_one')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
